syntax = "proto3";

option go_package = "./pb";

package pb;

service User {
  //登录
  rpc Login(LoginRequest) returns(LoginResponse);
  //注册
  rpc Register(RegisterRequest) returns(RegisterResponse);
  //获取用户信息
  rpc UserInfo(UserInfoRequest) returns(UserInfoResponse);
  //添加收货地址
  rpc AddUserAddress(UserAddressAddReq) returns(UserAddressAddResp);
  //编辑收货地址
  rpc EditUserAddress(UserAddressEditReq) returns(UserAddressEditResp);
  //删除收货地址
  rpc DelUserAddress(UserAddressDelReq) returns(UserAddressDelResp);
  //获取收货地址列表
  rpc GetUserAddressList(UserAddressListReq) returns(UserAddressListResp);

  // 添加收藏
  rpc AddUserCollection(UserCollectionAddReq) returns(UserCollectionAddResp);
  // 删除收藏
  rpc DelUserCollection(UserCollectionDelReq) returns(UserCollectionDelResp);
  // 收藏列表
  rpc GetUserCollectionList(UserCollectionListReq) returns(UserCollectionListResp);
  //根据主键id,查询收货地址
  rpc GetUserAddressInfo(UserAddressInfoReq) returns(UserAddress);
  
}


message UserInfo {
  uint64 Id = 1;          //用户ID
  string Username = 2;   //用户名
  string Password = 3;   //用户密码，MD5加密
  string Phone = 4;   //手机号
  int64  CreateTime = 5;  //创建时间
  int64  UpdateTime = 6;  //更新时间
}

//用户登陆
message LoginRequest {
  string Phone = 1;
  string Password = 2;
}

message LoginResponse {
  int64 Id = 1;
  string Username = 2;
  string Phone = 3;
}
//用户登陆

//用户注册
message RegisterRequest {
  string Phone = 1;
  string Password = 2;
  string username = 3;
}

message RegisterResponse {
  int64 Id = 1;
  string Username = 2;
  string Phone = 3;
}
//用户注册

// 用户信息
message UserInfoRequest {
  int64 Id = 1;
}

message UserInfoResponse {
  UserInfo user = 1;
}
// 用户信息


// 添加用户收货地址
message UserAddressAddReq {
  int64  uid = 1;   //uid
  string Name = 2;     //收货人名称
  string Phone = 3;       //手机号
  int32  IsDefault = 4;   //是否为默认地址
  string PostCode = 5;      //邮政编码
  string Province = 6;    //省份/直辖市
  string City = 7;        //城市
  string Region = 8;         //区
  string DetailAddress = 9;  //详细地址(街道)
}
message UserAddressAddResp {

}
// 添加用户收货地址

//获取收货地址列表
message UserAddressListReq {
  int64 uid = 1;
}

message UserAddress {
  int64 id = 1;
  int64  uid = 2;   //uid
  string Name = 3;     //收货人名称
  string Phone = 4;       //手机号
  int32  IsDefault = 5;   //是否为默认地址
  string PostCode = 6;      //邮政编码
  string Province = 7;    //省份/直辖市
  string City = 8;        //城市
  string Region = 9;         //区
  string DetailAddress = 10;  //详细地址(街道)
  int64 CreateTime = 11;
  int64 UpdateTime = 12;
}

message UserAddressListResp {
  repeated UserAddress list = 1;
}
//获取收货地址列表

//更新收货地址
message UserAddressEditReq {
  int64  Id = 1;
  string Name = 2;   //收货人名称
  string Phone = 3;   //手机号
  uint32 IsDefault = 4;   //是否为默认地址
  string PostCode = 5;   //邮政编码
  string Province = 6;   //省份/直辖市
  string City = 7;   //城市
  string Region = 8;   //区
  string DetailAddress = 9;   //详细地址(街道)
}
message UserAddressEditResp {

}
//更新收货地址

//删除收货地址
message    UserAddressDelReq {
  int64 Id = 1;
}
message UserAddressDelResp {
}
//删除收货地址

// 添加收藏
message UserCollectionAddReq {
  int64   Uid = 1;              // 用户id
  int64   ProductId = 2;        // 商品id
}
message UserCollectionAddResp {}
// 添加收藏

// 删除收藏
message UserCollectionDelReq {
  int64   Id = 1;               // 收藏Id
}
message UserCollectionDelResp {}
// 删除收藏

// 收藏列表
message UserCollectionListReq {
  int64   Uid = 1;              // 用户id
}
message UserCollectionListResp {
  repeated int64 ProductId = 1; // 商品id
}
// 收藏列表

//根据主键id,查询收货地址
message UserAddressInfoReq {
  int64 Id = 1;
}
//根据主键id,查询收货地址
